src/style.css
/*
Theme Name: Coltsin Theme
Theme URI: http://coltsin.mx
Description: Theme used for the Coltsin Website
Author: Alberto Avila (albertein), design by Miguel Angel Machado (mmachado53) 
Author URI: http://albertein.com.mx
Version: 1.0
Tags: coltsin

Licence:
Licence URI:

*/

body {
    background: #F8F8F0 url("img/bg.png") repeat-x;
    margin: 0px;
    padding: 0px;
    font-family: 'Podkova', serif;
}
h1 {
    font-size: 3em;
    font-weight: bold;
}

div.container {
    margin-left: 130px;
    width: 993px;
}

nav.top-menu {
    background: url("img/main-logo.png") no-repeat;
    padding-left: 274px;
    height: 134px;
    width: 710px;
    margin: 0px;
}

nav.top-menu ul {
    list-style-type: none;
    margin: 0px;
    padding: 0px;
    font-size: 1.2em;
    color: #f8f8f0;
    display: block;
    height: 41px;
    border-top: 1px solid #f36721;
    border-bottom: 2px dashed white;
}
div.top-menu-container {
    background-color: #272323;
    height: 46px;
    position: relative;
    top: 50px;
}
nav a {
    text-decoration: none;
    color: #f8f8f0;
}

nav.top-menu li {
    padding: 10px 15px;
    display: block;
    float: left;
}
nav.top-menu li:hover {
    background-color: #443f3c;
    border-right: 1px solid #462e24;
}
nav.top-menu li.top-menu-search {
    background-color: #343232;
    width: 200px;
    margin-top: 5px;
    padding-top: 5px;
    padding-bottom: 5px;
}
input#site-search-field {
    width: 120px;
}

header {
    margin-bottom: 20px;
}

header.main-page {
    background: url("img/main-bg.png") no-repeat 0 0px;    
}

div.main-background {
    margin: 0px;
    width: 993px;
    height: 420px;
    text-align: center;
    font-weight: bold;
}
div.main-background p {
    position: relative;
    left: -140px;
    font-size: 2em;
    margin: 0px;
}
span.coltsin-name {
    color: #f36721;
    text-transform: uppercase;
}

span.event-days-left {
    font-size: .6em;
    font-weight: normal;
    margin-left: 20px;
}
div.read-more-button {
    float: right;
    padding: 10px 20px;
    background-color: #221d18;
    color: #f8f8f0;
    margin-right: 20px;
}

div.read-more-button a {
    color: #f8f8f0;
    text-decoration: none;
}

div.main-page-read-more {
    margin-bottom: 50px;
}
div.main-page-read-more div {
    color: #d8d8d1;
    font-size: 2em;
    text-align: center;
    padding: 10px;
}
div.goto-events-button {
    float: left;
    width: 40%;
}

div.goto-blog-button {
    float: right;
    width: 40%;
}
footer {
    margin: 100px 0px 100px 0px;
    width: 100%;
    height: 266px;
    background: black url("img/footer-bg.png") repeat 62px 67px;
}
div.footer-border-box {
    width: 100%;
    height: 260px;
}
.footer-border-box {
    border-bottom: 2px dashed white;
}    
div.contact-inline-downward {
    top: 125px;
    left: 620px;
}
div.contact-inline-upward {
    top: 600px;
    left: 800px;
}
div.contact-inline {
    position: absolute;
    z-index: 100;
    display: none;
}
div.contact-inline > div {
    width: 268px;
} 
div.contact-inline-top {
    height: 34px;
    background: url("img/popup-top.png");
}
div.contact-inline-bottom {
    height: 34px;
    background: url("img/popup-bottom.png");
}

div.contact-inline-content {
    background-color: #272323;
    border-radius: 15px;
    color: #f8f8f0;
    padding: 20px 0px;
}
div.contact-inline-downward div.contact-inline-content {
   box-shadow: 0 8px 8px black;
    -moz-box-shadow: 0 8px 8px black;
    -webkit-box-shadow: 0 8px 8px black;
}
div.contact-inline-upward div.contact-inline-content {
   box-shadow: 0 -8px 8px black;
    -moz-box-shadow: 0 -8px 8px black;
    -webkit-box-shadow: 0 -8px 8px black;
}
div.contact-inline-content > * {
    margin-left: 10px;
}
div.contact-inline-content h1 {
    font-size: 2em;
    font-weight: normal;
    margin-top: 0px;
    margin-bottom: 0px;
}
div.contact-inline-content input, div.contact-inline-content textarea {
    width: 228px;
    color: #6f6d6b;
    background-color: #343232;
    border: 1px solid #232020;
    padding-left: 10px;
    margin-right: 10px;
    margin: 3px;
    font-size: 1em;
}
div.orange-button, div.dark-button {
    border-radius: 7px;
    box-shadow: 3px 3px 1px #000;
    -moz-box-shadow: 1px 1px 1px #000;
    -webkit-box-shadow: 1px 1px 1px #000;
    cursor: pointer;
}
div.orange-button {
    background-color: #ba3401;
    background-image: linear-gradient(bottom, rgb(185,52,0) 47%, rgb(206,71,22) 74%);
    background-image: -o-linear-gradient(bottom, rgb(185,52,0) 47%, rgb(206,71,22) 74%);
    background-image: -moz-linear-gradient(bottom, rgb(185,52,0) 47%, rgb(206,71,22) 74%);
    background-image: -webkit-linear-gradient(bottom, rgb(185,52,0) 47%, rgb(206,71,22) 74%);
    background-image: -ms-linear-gradient(bottom, rgb(185,52,0) 47%, rgb(206,71,22) 74%);

    background-image: -webkit-gradient(
	    linear,
	    left bottom,
	    left top,
	    color-stop(0.47, rgb(185,52,0)),
    	color-stop(0.74, rgb(206,71,22))
    );
}
div.dark-button {
    background-color: #221e18;
    background-image: linear-gradient(bottom, rgb(33,29,24) 47%, rgb(57,52,47) 74%);
    background-image: -o-linear-gradient(bottom, rgb(33,29,24) 47%, rgb(57,52,47) 74%);
    background-image: -moz-linear-gradient(bottom, rgb(33,29,24) 47%, rgb(57,52,47) 74%);
    background-image: -webkit-linear-gradient(bottom, rgb(33,29,24) 47%, rgb(57,52,47) 74%);
    background-image: -ms-linear-gradient(bottom, rgb(33,29,24) 47%, rgb(57,52,47) 74%);

    background-image: -webkit-gradient(
	    linear,
    	left bottom,
    	left top,
    	color-stop(0.47, rgb(33,29,24)),
    	color-stop(0.74, rgb(57,52,47))
    );
}
div.contact-send-button {
    float: right;
    padding: 8px;
    margin-right: 10px;
}
div.clear {
    clear: both;
}

aside {
    float: right;
    width: 25%;
    margin-left: 50px;
}

div.post-entries {
    background-color: white;
    float: left;
    width: 70%;
}

div.post-entries h1 {
    margin-top: 15px;
    margin-bottom: 0px;
}


article {
    margin-top: 20px;
    background-color: white;
    background-image: url("img/article-bg1.png"), url("img/article-bg2.png"), url("img/article-bg3.png");
    background-position: -5px bottom, right bottom, center bottom;
    background-repeat: no-repeat, no-repeat, repeat-x;
    padding-left: 20px;
    padding-right: 0px;
    border-top: 2px dashed black;
    padding-bottom: 40px;
}

div.post-entries article {
    margin-bottom: 60px;
}

div.post-entries article aside {
    float: right;
    width: 74px;
    height: 86px;
    background: url("img/post-date-bg.png");
    margin-right: 30px;
    position: relative;
    top: -3px;
    color: white;
    text-align: center;
    font-weight: bold;
}
div.post-entries article aside span.month {
    font-size: 1.3em;
}
div.post-entries article aside span.day {
    font-size: 2.5em;
}
div.tag-soup {
    width: 80%;
}
div.tag {
    float: left;
}
div.tag div {
    margin: 0px;
    padding: 0px;
    height: 35px;
    float: left;
}
div.tag-left {
    background: url("img/tag-bg-left.png");
    width: 16px;
}
div.tag-middle {
    background: url("img/tag-bg-middle.png") repeat-x;
    padding-top: 7px !important;
}

div.tag-right {
    background: url("img/tag-bg-right.png");
    width: 20px;
}

nav.bottom-menu {
    text-align: center;
    position: relative;
    top: -70px;
}

div.bottom-menu-container {
    margin: 0 auto;
}

nav.bottom-menu ul {
    list-style-type: none;
    color: #f8f8f0;
    font-size: 1.4em;
}

nav.bottom-menu li {
    display: inline;
    margin: 20px;
}

nav.bottom-menu a {
    text-decoration: underline !important;
}

article h1 a, div.tag a {
    color: black;
    text-decoration: none;
}
div.tag {
    cursor: pointer;
}

section.sidebar-item h2 {
    margin: 0px;
}

div.sidebar-item-decoration {
    position: relative;
    top: 3px;
    height: 10px;
    background-color: #272323;
    border-top: 1px solid #f36721;
}
div.sidebar-item-decoration div.border-box {
    height: 8px;
    border-bottom: 2px dashed white;
}
div.sidebar-item-content {
    background-color: rgb(167, 191, 191);
    background-color: rgba(167, 191, 191, .22);
}
div.sidebar-item-content-box {
    padding: 0px 8px 5px;
}
div#sidebar {
    margin: 0px;
    padding: 0px;
}
div#sidebar > ul {
    margin: 0px;
    padding: 0px;
}
ul.tag-list, ul.event-list {
    list-style-type: none;
    padding: 0px 5px;
}

ul.tag-list li > * {
    margin-left: 10px;
}

ul.tag-list li:before {
    content: "-";
}

ul.tag-list a {
    text-decoration: none;
    color: black;
}

ul.event-list a {
    color: black;
    text-decoration: none;
}

ul.event-list span.event-date {
    color: #f36721;
    font-weight: bold;
}

ul.event-list span.event-name {
    text-decoration: underline;
}

